# PensionSmart

./: .gitignore  Makefile  README.md  个人养老金智能投顾平台_高阶需求说明书.md
.cursor/rules/: detailed-design-spec.mdc  engineering-conventions.mdc
.cursor/skills/detailed-design/: SKILL.md
contracts/: README.md
contracts/proto/account/v1/: account.proto
contracts/proto/advisor/v1/: quant.proto  suitability.proto
contracts/proto/common/v1/: common.proto
contracts/proto/product/v1/: product.proto
contracts/proto/trade/v1/: trade.proto
data-platform/: README.md
data-platform/collect/: README.md
data-platform/collect/event-dictionary/: events-v1.md
data-platform/governance/: README.md
data-platform/offline-spark/: README.md
data-platform/realtime-flink/: README.md
data-platform/warehouse-clickhouse/: README.md
data-platform/warehouse-clickhouse/ddl/ods/: ods_events.sql
docs/: pension-hrs-v1.0.md  pension-prd-executable-v1.1.md  个人养老金智能投顾平台_业务模块多维度分析V1.md  个人养老金智能投顾平台_模块功能职责分解V1.md  详细设计规范V1.md
docs/architecture/: 00_系统架构设计总览V1.md  01_营销获客域_模块设计V1.md  02_用户管理域_模块设计V1.md  03_投顾引擎域_模块设计V1.md  04_产品中心域_模块设计V1.md  05_交易结算域_模块设计V1.md  06_内容教育域_模块设计V1.md  07_数据中台域_模块设计V1.md  08_基础平台域_模块设计V1.md
docs/detailed-design/: _TEMPLATE_详细设计.md
docs/detailed-design/marketing/: tax-calc-svc_详细设计V1.md
frontend/: README.md
frontend/bff/: package.json  tsconfig.json
frontend/bff/src/: app.module.ts  main.ts
frontend/prototype/: README.md
frontend/web-app/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/web-app/src/: App.tsx
infra/: README.md
infra/cicd/: README.md  gitlab-ci.template.yml
infra/config/: README.md
infra/deploy/: docker-compose.yml
infra/deploy/argocd/: README.md
infra/deploy/k8s/: namespaces.yaml
infra/deploy/k8s/advisor/: kustomization.yaml
infra/deploy/k8s/bff-gateway/: kustomization.yaml
infra/deploy/k8s/content/: kustomization.yaml
infra/deploy/k8s/data-platform/: kustomization.yaml
infra/deploy/k8s/marketing/: kustomization.yaml
infra/deploy/k8s/network-policies/: secure-zone.yaml
infra/deploy/k8s/product/: kustomization.yaml
infra/deploy/k8s/trade/: kustomization.yaml
infra/deploy/k8s/user-account/: kustomization.yaml
infra/gateway/: README.md  routes.yaml
infra/observability/: README.md
infra/observability/prometheus/: alert-rules.yaml
infra/security/: README.md
platform-commons/: README.md
platform-commons/pension-domain-commons/: pom.xml
services/advisor/: README.md  pom.xml
services/advisor/allocation-svc/: README.md  pom.xml
services/advisor/allocation-svc/src/main/resources/: application.yml
services/advisor/behavior-svc/: README.md  pom.xml
services/advisor/quant-compute/: README.md  pyproject.toml
services/advisor/quant-compute/src/quant_compute/: __init__.py  server.py
services/advisor/rebalance-svc/: README.md  pom.xml
services/advisor/recommend-svc/: README.md  pom.xml
services/advisor/risk-svc/: README.md  pom.xml
services/content/: README.md  pom.xml
services/content/activity-svc/: README.md  pom.xml
services/content/cms-svc/: README.md  pom.xml
services/content/knowledge-svc/: README.md  pom.xml
services/content/learning-svc/: README.md  pom.xml
services/content/simulator-svc/: README.md  pom.xml
services/marketing/: README.md  pom.xml
services/marketing/abtest-svc/: README.md  pom.xml
services/marketing/journey-svc/: README.md  pom.xml
services/marketing/profile-svc/: README.md  pom.xml
services/marketing/reach-svc/: README.md  pom.xml
services/marketing/referral-svc/: README.md  pom.xml
services/marketing/tax-calc-svc/: README.md  pom.xml
services/product/: README.md  pom.xml
services/product/ai-interpret-svc/: README.md  pom.xml
services/product/catalog-svc/: README.md  pom.xml
services/product/compare-svc/: README.md  pom.xml
services/product/detail-svc/: README.md  pom.xml
services/product/ingest-svc/: README.md  pom.xml
services/product/rating-svc/: README.md  pom.xml
services/trade/: Cargo.toml  README.md
services/trade/convert-svc/: Cargo.toml
services/trade/convert-svc/src/: infrastructure.rs  main.rs
services/trade/redeem-svc/: Cargo.toml
services/trade/redeem-svc/src/: interfaces.rs  main.rs
services/trade/settlement-recon-svc/: Cargo.toml
services/trade/settlement-recon-svc/src/: main.rs
services/trade/sip-svc/: Cargo.toml
services/trade/sip-svc/src/: main.rs
services/trade/trade-risk-svc/: Cargo.toml
services/trade/trade-risk-svc/src/: application.rs  domain.rs  main.rs
services/trade/trade-svc/: Cargo.toml
services/trade/trade-svc/src/: main.rs
services/user/: README.md  pom.xml
services/user/member-service/: README.md  pom.xml
services/user/message-service/: README.md  pom.xml
services/user/pension-account-service/: README.md  pom.xml
services/user/preference-service/: README.md  pom.xml
services/user/user-service/: README.md  pom.xml
(+59 files in other folders)
