[workspace]
resolver = "2"
members = [
    "trade-svc",
    "redeem-svc",
    "sip-svc",
    "convert-svc",
    "settlement-recon-svc",
    "trade-risk-svc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

# D5 交易结算域 · Rust 高并发核心 (docs/architecture/05_交易结算域_模块设计V1.md)
# 强合规隔离区; 幂等 + Saga + Outbox + 单向状态机
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = "0.11"
prost = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "rust_decimal"] }
rust_decimal = "1"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
