[package]
name = "settlement-recon-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "清算对账: T+1 清算、逐笔对账、差异告警、审计留痕"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
