[package]
name = "trade-risk-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "交易风控: 异常识别、实时拦截、人工工单、规则管理"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
