[package]
name = "trade-svc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "申购交易: 单笔/组合申购、拆单、Saga 编排、大额验证、状态查询"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
